<resources>
    <string name="app_name">Devaldo Rojo</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="ranking">Ranking</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="about">About us</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">Devaldo Rojo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="finances">Finances</string>
    <string name="select_player">Select player...</string>
    <string name="title_activity_app_launch">AppLaunchActivity</string>
</resources>
